2010-02-24 Added pyplot.fig_subplot(), to create a figure and a group of
	   subplots in a single call.  This offers an easier pattern than
	   manually making figures and calling add_subplot() multiple times. FP
	   
2010-02-17 Added Gokhan's and Mattias' customizable keybindings patch
           for the toolbar.  You can now set the keymap.* properties
           in the matplotlibrc file.  Newbindings were added for
           toggling log scaling on the x-axis. JDH

2010-02-16 Committed TJ's filled marker patch for
           left|right|bottom|top|full filled markers.  See
           examples/pylab_examples/filledmarker_demo.py. JDH

2010-02-11 Added 'bootstrap' option to boxplot. This allows bootstrap
           estimates of median confidence intervals. Based on an
           initial patch by Paul Hobson. - ADS

2010-02-06 Added setup.cfg "basedirlist" option to override setting
           in setupext.py "basedir" dictionary; added "gnu0"
           platform requested by Benjamin Drung. - EF

2010-02-06 Added 'xy' scaling option to EllipseCollection. - EF

2010-02-03 Made plot_directive use a custom PlotWarning category, so that
           warnings can be turned into fatal errors easily if desired. - FP

2010-01-29 Added draggable method to Legend to allow mouse drag
placement.  Thanks Adam Fraser. JDH

2010-01-25 Fixed a bug reported by Olle Engdegard, when using
           histograms with stepfilled and log=True - MM

2010-01-16 Upgraded CXX to 6.1.1 - JDH

2009-01-16 Don't create minor ticks on top of existing major
           ticks. Patch by Neil Crighton. -ADS

2009-01-16 Ensure three minor ticks always drawn (SF# 2924245). Patch
           by Neil Crighton. -ADS

2010-01-16 Applied patch by Ian Thomas to fix two contouring
           problems: now contourf handles interior masked regions,
           and the boundaries of line and filled contours coincide. - EF

2009-01-11 The color of legend patch follows the rc parameters